--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
+@import url(https://fonts.bunny.net/css?family=jetbrains-mono:400,500,600,700);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply font-jetbrainsmono;
+}
